# RoseCDL

./: .gitignore  LICENSE  README.md  plot_outlier_detection.py  pyproject.toml  setup.py
.github/workflows/: benchopt_test.yml  main.yaml  main.yml
benchmark/: README.rst  config.yml  config_outlier.yml  config_runtime.yml  objective.py  test_config.py
benchmark/benchmark_utils/: __init__.py
benchmark/configs/: config_noise.yml  config_outlier.yml  config_runtime.yml  config_scaling.yml  test.yml
benchmark/datasets/: simulated.py  sleep_apnea.py
benchmark/plotting/: plot_comparison_outlier_1D.py  plot_runtime_results.py
benchmark/solvers/: alpha-csc.py  deepcdl.py  rosecdl.py  sporco.py  wincdl.py
experiments/: plot_after_during.py  plot_figure_mult_freqs.py  plot_figure_recoveries_1d.py  plot_figure_runtime.py  plot_mult_freq.py  plot_outlier_detection.py  plot_rare_event_detection.py  plot_recovery.py  plot_runtime.py  run_anomaly_detection_2d.py  run_deepcdl_compare.py  run_different_recoveries_1d.py  run_full_loss_times.py  run_inline_after_comparison_2d.py  run_multiple_frequency.py  run_outlier_detection_comparison.py  run_outlier_detection_comparison_2d.py  run_rare_event_detection.py  run_recovery_2d.py  run_regularization_effect.py  run_regularization_effect_2d.py  run_rosecdl.py  run_rosecdl_2d.py  run_runtime_1D.py  run_runtime_2D.py  run_time_1d.py  run_time_2d.py  run_wincdl.py  run_wincdl_2d.py  sporco_reg_effect.py
experiments/New/: config.yaml  config_recovery_ad.yaml  outlier_detection.py  pipeline_losses.py  pipeline_recov_score.py  pipeline_recovery_ad.py  simple_test.py  simulate.py  utils.py
experiments/New/utils/: utils.py  utils_signal.py
experiments/camcan/: plot_dict.py
experiments/camcan/results_alphacsc/: apply_alphacsc.py  get_loss_curves.py  get_recovery_df.py  plot_recovery.py
experiments/camcan/scripts/: camcan.py  cdl_pop.py  utils.py  utils_plot.py
experiments/figures_scripts/: plot_dict.py  plot_dict_cat.py  plot_recovery.py
experiments/gait_steps/: benchmark_window.py  get_participants_df.py  run_gait.py  utils_gait.py
experiments/letters/: 2D_exp.ipynb  generate_letters.py
experiments/physionet/: apnea.ipynb  benchmark_window.py  get_pop_recovery.py  get_pop_reg.py  get_recovery.py  plot_bads.py  plot_benchmark_apnea-ecg.py  plot_group_atoms.py  plot_group_std.py  plot_outliers_detection.py  plot_pop_atoms.py  plot_reconstruct.py  plot_recovery.py  run_apnea.py  run_different_reg_apnea.py  run_full_pipeline.py  run_pop_cdl.py  run_rosecdl_apnea.py  select_ecg_atoms.py  utils_apnea.py
experiments/results_alphacsc/: apply_dripp.py  get_loss_curves.py  get_recovery_df.py
experiments/scripts/: cdl_pop.py  compute_dict_similarity.py  compute_lmbd.py  eval_n_atoms.py  exp_grad.py  exp_lambda_global.py  exp_residuals.py  exp_sample.py  group_dict.py  simulate.py  stats_patches.py  test_dataloader.py  test_tom.py  utils.py  utils_plot.py
rosecdl/: __init__.py  csc.py  loss.py  model.py  optimizer.py  rosecdl.py  train.py
rosecdl/csc/: __init__.py  base.py  dim1.py  dim2.py  factory.py
rosecdl/datasets/: __init__.py  generate_letters.py  meg.py  physionet.py  psm.py  simulated.py  subwindow_dataset.py
rosecdl/tests/: test_masking.py  test_rosecdl.py  test_wincdl.py
rosecdl/utils/: convolution.py  dictionary.py  utils.py  utils_exp.py  utils_outlier_comparison.py  utils_outliers.py  utils_signal.py  utils_simulated_waves.py  validation.py
runtime_benchmark/: README.rst  config.yml
runtime_benchmark/solvers/: sporco.py
tests/: test_masking.py  test_rosecdl.py  test_scores.py  test_subwindows.py
tests/csc/: test_dim1.py  test_dim2.py  test_factory.py
tests/test_csc/: test_factory.py
tests/utils/: test_convolution.py  test_dictionary.py
wincdl/: datasets.py  loss.py  model.py  optimizer.py  train.py  utils.py  utils_outliers.py  wincdl.py
wincdl/datasets/: __init__.py  generate_letters.py  meg.py  physionet.py  psm.py  simulated.py  subwindow_dataset.py
wincdl/tests/: test_dictionary.py  test_masking.py  test_subwindows.py  test_wincdl.py  test_windows.py
wincdl/utils/: __init__.py  utils.py  utils_exp.py  utils_outlier_comparison.py  utils_outliers.py  utils_signal.py
