[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rosecdl"]

[project]

name = "rosecdl"
version = "0.1.0"

requires-python = ">=3.10"
authors = [
  {name = "Jad Yehya", email = "jad.yehya@inria.fr"},
  {name = "Mansour Benbakoura", email = "mansour.benbakoura@inria.fr"},
  {name = "Cédric Allain", email = "cedric.allain@inria.fr"},
  {name = "Benoît Malézieux", email = "benoit.malezieux@inria.fr"},
  {name = "Thomas Moreau", email = "thomas.moreau@inria.fr"},
]
description = "RObust and ScalablE Convolution Dictionary Learning"
readme = "README.md"

dependencies = [
    "imageio",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "torch",
    "tqdm",
    "wfdb",
]

[project.optional-dependencies]

experiments = [
    "alphacsc",
    "benchopt",
    "joblib",
    "mne",
    "seaborn",
    "sporco",
]

dev = [
    "isort",
    "pytest",
    "ruff",
]

[tool.isort]

line_length = 88
multi_line_output = 3

[tool.ruff]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "__cache__",
]

line-length = 88
indent-width = 4

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]

select = ["ALL"]
ignore = [
    "ANN",
    "COM812",
    "D100",
    "D102",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "EM",
    "FBT",
    "FIX",
    "N802",
    "N803",
    "N806",
    "N812",
    "PERF401",
    "PLR0913",
    "PLR2004",
    "RUF012",
    "T201",
    "TD",
    "TRY003",
]
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]

mypy-init-return = true

[tool.ruff.lint.per-file-ignores]

"tests/*" = [
    "ANN",
    "COM812",
    "D",
    "INP001",
    "S",
    "SLF001",
]

"benchmark/*" = ["ALL"]
"experiments/*" = ["ALL"]
"rosecdl/datasets/*" = ["ALL"]
"rosecdl/optimizer.py" = ["C901", "PLR0912", "PLW2901"]
"rosecdl/train.py" = ["B023"]
"rosecdl/utils/*" = ["ALL"]
